# UniV2X_full

./: .gitignore  CLAUDE_quantv2x.md  CLAUDE_stage1.md  CLAUDE_stage2.md  CLAUDE_stage3.md  CLAUDE_test.md  README.md  plan.md  plan_adaround.md  plan_head.md  plan_quantv2x.md  plan_trt_migration.md  quantv2x_learn.md  requirements.txt  result_log.md  result_method.md  rethink.md
calibration/: latency_lut.json
docs/: TRT_EVAL.md
md/: CLAUDE.md
paper_learning/: 1. 下一步工作全局规划.md  CASCO_study_notes.md  hw_sw_codesign_full_pipeline.md  hw_sw_codesign_quant+prune.md  survey_hw_sw_codesign.md  survey_progress.md  survey_task_plan.md  搜索空间体系化总结.md  松耦合的软硬件协同.md
plugins/: CMakeLists.txt
plugins/inverse/: inversePlugin.cpp  inversePlugin.h
plugins/multi_scale_deform_attn/: ms_deform_attn.cpp  ms_deform_attn.h
prune_configs/: aggressive.json  conservative.json  decouple_enc07_04.json  decouple_enc08_03.json  decouple_enc10_03.json  decouple_enc10_07.json  moderate.json  p1_ffn_20pct.json  p1_ffn_30pct.json  p1_ffn_40pct.json  p1_ffn_50pct.json  p1_ffn_60pct.json  p1_ffn_70pct.json  p1_ffn_80pct.json  p1_with_seg_mlp_30pct.json  p9_decoder_3layers.json  p9_decoder_4layers.json  p9_decoder_5layers.json  s2_ffn60_dec5.json
quant_configs/: calibrated_int8_sym.json  default_int8.json  int4_wonly_pt.json  int8_wa_pc.json  int8_wa_pt.json  int8_wonly_pt.json
tools/: _debug_trace.py  _debug_trace2.py  _debug_trace3.py  _debug_training.py  _debug_wrapper.py  _test_aten_ops.py  _test_aten_ops2.py  _test_onnx_downstream.py  _test_pipeline.py  async_prefetcher.py  benchmark_latency.py  benchmark_temporal_cache.py  benchmark_trt_engine.py  build_qdq_onnx_adaround.py  build_trt_downstream.py  build_trt_fp_univ2x.py  build_trt_int8_univ2x.py  calibrate_univ2x.py  collect_metrics.py  (+34 more)
(+121 files in other folders)
